recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:6: error: '<-' expected but ')' found.
  for (i -> 1 to 4) {
                  ^FourSquare:11: error: illegal start of simple expression
} 
^